[gd_scene load_steps=7 format=3 uid="uid://bb1j0hrkiax8y"]

[ext_resource type="Script" uid="uid://bir2j8mm3okv3" path="res://Scenes/Game_UI/game_ui.gd" id="1_hg322"]
[ext_resource type="LabelSettings" uid="uid://bttpfp8uwbial" path="res://Resources/white_title_36.tres" id="1_poepr"]
[ext_resource type="LabelSettings" uid="uid://bsx4wjew0er6f" path="res://Resources/white_title_72.tres" id="2_hg322"]
[ext_resource type="LabelSettings" uid="uid://cbwakt40y553m" path="res://Resources/red_title_36.tres" id="3_r3b6m"]
[ext_resource type="AudioStream" uid="uid://cwbulhyjan4k1" path="res://assets/audio/game_over.wav" id="5_r3b6m"]
[ext_resource type="AudioStream" uid="uid://dbgp5dcljglyv" path="res://assets/audio/score.wav" id="6_7j82w"]

[node name="Game_UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hg322")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="score_label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "000"
label_settings = ExtResource("1_poepr")
vertical_alignment = 1

[node name="PressSpace" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Press Space"
label_settings = ExtResource("2_hg322")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOver" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Game Over"
label_settings = ExtResource("3_r3b6m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_r3b6m")
volume_db = -20.0

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_7j82w")
volume_db = -20.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
